[gd_scene load_steps=3 format=3 uid="uid://tutorial_popup_001"]

[ext_resource type="Script" path="res://scripts/designer/TutorialPopup.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tutorial_panel"]
bg_color = Color(0.101961, 0.101961, 0.101961, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.290196, 0.886275, 0.886275, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TutorialPopup" type="ColorRect"]
visible = false
z_index = 1000
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tutorial_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TopMargin" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 24
text = "STEP 1: TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Tutorial message goes here. This explains what the player should do next."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "CONTINUE"

[node name="BottomMargin" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="SkipButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "SKIP TUTORIAL"

[node name="ArrowContainer" type="Node2D" parent="."]
z_index = 1001
